--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,16 @@
     <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>2.7.7</version>
+	<version>2.7.8</version>
     </parent>    
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.mycompany.springkafkaz.SpringKafkaZApp</exec.mainClass>
-        <spring-boot.version>2.7.7</spring-boot.version>
+        <exec.mainClass>com.zdrazil.springkafkaz.SpringKafkaZApp</exec.mainClass>
+        <spring-boot.version>2.7.8</spring-boot.version>
+        <spring-kafka.version>2.9.3</spring-kafka.version>
         <springfox.version>3.0.0</springfox.version>
     </properties>
 
@@ -56,6 +57,8 @@
     <dependency>
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
+        <version>${spring-kafka.version}</version>
+        
     </dependency>
 
     <!--
