--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ management.health.probes.enabled=true
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
+
+#kafka
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAPSERVERS:127.0.0.1:9093}
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+com.springkafkaz.topic=${KAFKA_TOPIC:topic111}
