--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.zdrazil.springkafkaz.SpringKafkaZApp</exec.mainClass>
         <spring-boot.version>2.7.8</spring-boot.version>
-        <spring-kafka.version>2.9.3</spring-kafka.version>
+        <!--spring-kafka.version>2.9.3</spring-kafka.version-->
         <springfox.version>3.0.0</springfox.version>
     </properties>
 
@@ -57,8 +57,7 @@
     <dependency>
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
-        <version>${spring-kafka.version}</version>
-        
+        <!--version>${spring-kafka.version}</version-->
     </dependency>
 
     <!--
